modifed header section

--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
     </style>
 </head>
 <body>
-    <h1>Athira Shibu</h1>
-    <p>I am a Back End Developer. I did a Master's Degree in Computer Science. 1+ years of experience 
-        as a Back End Developer. Focusing on Laravel.
-    </p>
+    <div class="container">
+        <div class="header">
+            <div class="text-content">
+                <h1>Athira Shibu</h1>
+                <p class="para">
+                    I am a Back End Developer. I did a Master's Degree in Computer Science. 1+ years of experience 
+                    as a Back End Developer. Focusing on Laravel.
+                </p>
+            </div>
+            <div>
+                <img class="my-image" src="images/my_image.webp" alt="oops">
+            </div>
+        </div>
+    </div>
+    
+    <a href="https://github.com/athira-shibu">GitHub</a>
+    <a href="https://www.linkedin.com/in/athira-shibu-the-dreamer/">LinkedIn</a>
     <script src="script.js"></script>
 </body>
 </html>
