added alert box

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>Athira Shibu</h1>
                 <p class="para">
                     I am a Back End Developer. I did a Master's Degree in Computer Science. 1+ years of experience 
-                    as a Back End Developer. Focusing on Laravel.
+                    as a Back End Developer. I love coding Solving problems.Focusing on Laravel.
                 </p>
             </div>
             <div>
